--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="DataObject.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameServer.cpp" />
+    <ClCompile Include="Responder.cpp" />
     <ClCompile Include="server.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameServer.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Responder.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
