--- a/SampleClient/SampleClient.vcxproj
+++ b/SampleClient/SampleClient.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Server\ServerMessage.cpp" />
     <ClCompile Include="client.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameMessage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Server\ServerMessage.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameMessage.h" />
     <ClInclude Include="json.hpp" />
