--- a/SampleClient/SampleClient.vcxproj.filters
+++ b/SampleClient/SampleClient.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="GameMessage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\ServerMessage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="json.hpp">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameMessage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Server\ServerMessage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
